sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:10: error: ')' expected but ';' found.
 		if (plusPetit (i+1;i))
                                  ^AlgBubbleSort1:10: error: ';' expected but ')' found.
 		if (plusPetit (i+1;i))
                                    ^AlgBubbleSort1:23: error: 'while' expected but '}' found.
}
^